--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.0'
-	id 'io.spring.dependency-management' version '1.1.6'
+	alias libs.plugins.org.springframework.boot
+	alias libs.plugins.io.spring.dependency.management
 }
 
 group = 'com.example.hivemq'
@@ -25,20 +25,20 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-//	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation "com.example.hivemq.boot:hivemq-spring-boot-starter:1.0.0-SNAPSHOT"
-	implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.3"
-	implementation "com.sun.xml.bind:jaxb-impl:2.3.9"
+	implementation libs.org.springframework.boot.starter
+	implementation libs.org.springframework.boot.starter.validation
+	implementation libs.hivemq.spring.boot.starter
 
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor libs.lombok
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation libs.org.springframework.boot.starter.test
+	testRuntimeOnly libs.junit.platform.launcher
 }
 
-tasks.named('bootJar') {
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+tasks.named("bootJar") {
+	manifest {
+		attributes 'HiveMQ-Version': libs.versions.hivemq.starter.version.get()
+	}
 }
 
 tasks.named('test') {
