--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,64 +1,112 @@
 spring:
   application:
-    name: springboot-hivemq-ce-embedded
+    name: HiveMQ-CE embedded Demo
 
 logging:
   config: classpath:logback-spring.xml
   name: application
   path: log
   file:
-    name: log/application.log
+    name: application.log
 
-# hivemq:
-#  enabled: true
-#  config.folder: .hivemq/config
-#  data.folder: .hivemq/data
-#  extensions.folder: .hivemq/extensions
-#  extensions.collector.enabled: true
-#  extensions.collector.info.enabled: true
-#  extensions.collector.info.topic: "boot/extensions"
-#  log.folder: .hivemq/log
-#  log.level: info
+hivemq:
+  enabled: true
+  auto-start: true
+  config.folder: .hivemq/conf
+  data.folder: .hivemq/data
+  extensions.folder: .hivemq/extensions
+  extensions.collector.enabled: true
+  extensions.collector.info.publish: true
+  extensions.collector.info.topic: "boot/extensions"
+  log.folder: ${logging.path}
+  log.level: info
 
-#  config:
-#    listeners:
-#      tcp-listeners:
-#        - name: defaultTcpListener
-#          port: 1883
+  config:
+    listeners:
+      tcp-listeners:
+        - name: first-tcp-listener
+          port: 1883
+          bind-address: 0.0.0.0
+        - name: second-tcp-listener
+          port: 1884
+          bind-address: localhost
+
+      websocket-listeners:
+        - name: default-websocket-listener
+          port: 8000
+          bind-address: 0.0.0.0
+          path: /mqtt
+          allow-extensions: true
+          subprotocols: mqttv3.1, mqtt
+
+#      tls-tcp-listeners:
+#        - name: default-tls-tcp-listener
+#          port: 8883
 #          bind-address: 0.0.0.0
-#
-#      websocket-listeners:
-#        - name: defaultWebsocketListener
-#          port: 8000
+#          tls:
+#            protocols: TLSv1.1, TLSv1.2
+#            cipher-suites:
+#              - TLS_RSA_WITH_AES_128_GCM_SHA256
+#              - TLS_RSA_WITH_AES_128_CBC_SHA
+#              - TLS_RSA_WITH_AES_256_CBC_SHA
+#            client-authentication-mode: none
+#            handshake-timeout: 10000
+#            concurrentHandshakeLimit: -1
+#            native-ssl: false
+#            keystore:
+#              path: path-to-keystore
+#              password: my-secret-password
+#              private-key-password: my-super-secret-password
+#            truststore:
+#              path: path-to-truststore
+#              password: my-secret-password
+
+#      tls-websocket-listeners:
+#        - name: default-tls-websocket-listener
+#          port: 8080
+#          bind-address: 0.0.0.0
 #          path: /mqtt
-#          bind-address: 0.0.0.0
 #          allow-extensions: true
-#          subprotocols:
-#            - mqttv3.1
-#            - mqtt
+#          subprotocols: mqttv3.1, mqtt
+#          tls:
+#            protocols:
+#              - TLSv1.1
+#              - TLSv1.2
+#            cipher-suites: TLS_RSA_WITH_AES_128_GCM_SHA256, TLS_RSA_WITH_AES_128_CBC_SHA, TLS_RSA_WITH_AES_256_CBC_SHA
+#            client-authentication-mode: none
+#            handshake-timeout: 10000
+#            concurrentHandshakeLimit: -1
+#            native-ssl: false
+#            keystore:
+#              path: path-to-keystore
+#              password: my-secret-password
+#              private-key-password: my-super-secret-password
+#            truststore:
+#              path: path-to-truststore
+#              password: my-secret-password
 
-#    mqtt:
-#      session-expiry.max-interval: 60
-#      message-expiry.max-interval: 3600
-#      packets.max-packet-size: 268435460
-#      receive-maximum.server-receive-maximum: 10
-#      keep-alive.max-keep-alive: 65535
-#      keep-alive.allow-unlimited: false
-#      topic-alias.enabled: true
-#      topic-alias.max-per-client: 5
-#      subscription-identifier.enabled: true
-#      wildcard-subscriptions.enabled: true
-#      shared-subscriptions.enabled: true
-#      retained-messages.enabled: true
-#      quality-of-service.max-qos: 2
-#      queued-messages.max-queue-size: 1000
-#      queued-messages.strategy: discard-oldest
-#
-#    security:
-#      allow-empty-client-id.enabled: false
-#      payload-format-validation.enabled: false
-#      utf8-validation.enabled: true
-#      allow-request-problem-information.enabled: true
-#
-#    persistence:
-#      mode: in-memory
+    mqtt:
+      keep-alive.allow-unlimited: false
+      keep-alive.max-keep-alive: 65535
+      message-expiry.max-interval: 3600
+      packets.max-packet-size: 268435460
+      quality-of-service.max-qos: 2
+      queued-messages.max-queue-size: 1000
+      queued-messages.strategy: discard-oldest
+      receive-maximum.server-receive-maximum: 10
+      retained-messages.enabled: true
+      session-expiry.max-interval: 60
+      shared-subscriptions.enabled: true
+      subscription-identifier.enabled: true
+      topic-alias.enabled: true
+      topic-alias.max-per-client: 5
+      wildcard-subscriptions.enabled: true
+
+    persistence:
+      mode: in-memory
+
+    security:
+      allow-empty-client-id.enabled: false
+      payload-format-validation.enabled: false
+      utf8-validation.enabled: true
+      allow-request-problem-information.enabled: true
