--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,23 @@
+#
+#    Copyright 2024-present Jan Haenel
+#
+#    Licensed under the Apache License, Version 2.0 (the "License");
+#    you may not use this file except in compliance with the License.
+#    You may obtain a copy of the License at
+#
+#        http://www.apache.org/licenses/LICENSE-2.0
+#
+#    Unless required by applicable law or agreed to in writing, software
+#    distributed under the License is distributed on an "AS IS" BASIS,
+#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+#    See the License for the specific language governing permissions and
+#    limitations under the License.
+#
 spring:
   application:
     name: HiveMQ-CE embedded Demo
 
+# Logging: Important to import the logback-spring.xml, HiveMQs will take precedence otherwise
 logging:
   config: classpath:logback-spring.xml
   name: application
@@ -9,6 +25,7 @@ logging:
   file:
     name: log/application.log
 
+# Configuration for hivemq-spring-boot-starter
 hivemq:
   enabled: true
   auto-start: false
@@ -21,76 +38,18 @@ hivemq:
   log.folder: ${logging.path}
   log.level: info
 
+  # HiveMQ-CE specific configuration
   config:
     listeners:
       tcp-listeners:
-        - name: first-tcp-listener
+        - name: default-tcp-listener
           port: 1883
           bind-address: 0.0.0.0
-        - name: second-tcp-listener
-          port: 1884
-          bind-address: localhost
-
-      websocket-listeners:
-        - name: default-websocket-listener
-          port: 8000
-          bind-address: 0.0.0.0
-          path: /mqtt
-          allow-extensions: true
-          subprotocols: mqttv3.1, mqtt
-
-#      tls-tcp-listeners:
-#        - name: default-tls-tcp-listener
-#          port: 8883
-#          bind-address: 0.0.0.0
-#          tls:
-#            protocols: TLSv1.1, TLSv1.2
-#            cipher-suites:
-#              - TLS_RSA_WITH_AES_128_GCM_SHA256
-#              - TLS_RSA_WITH_AES_128_CBC_SHA
-#              - TLS_RSA_WITH_AES_256_CBC_SHA
-#            client-authentication-mode: none
-#            handshake-timeout: 10000
-#            concurrentHandshakeLimit: -1
-#            native-ssl: false
-#            keystore:
-#              path: path-to-keystore
-#              password: my-secret-password
-#              private-key-password: my-super-secret-password
-#            truststore:
-#              path: path-to-truststore
-#              password: my-secret-password
-
-#      tls-websocket-listeners:
-#        - name: default-tls-websocket-listener
-#          port: 8080
-#          bind-address: 0.0.0.0
-#          path: /mqtt
-#          allow-extensions: true
-#          subprotocols: mqttv3.1, mqtt
-#          tls:
-#            protocols:
-#              - TLSv1.1
-#              - TLSv1.2
-#            cipher-suites: TLS_RSA_WITH_AES_128_GCM_SHA256, TLS_RSA_WITH_AES_128_CBC_SHA, TLS_RSA_WITH_AES_256_CBC_SHA
-#            client-authentication-mode: none
-#            handshake-timeout: 10000
-#            concurrentHandshakeLimit: -1
-#            native-ssl: false
-#            keystore:
-#              path: path-to-keystore
-#              password: my-secret-password
-#              private-key-password: my-super-secret-password
-#            truststore:
-#              path: path-to-truststore
-#              password: my-secret-password
 
     mqtt:
       keep-alive.allow-unlimited: false
       keep-alive.max-keep-alive: 65535
       message-expiry.max-interval: 3600
-      packets.max-packet-size: 268435460
-      quality-of-service.max-qos: 2
       queued-messages.max-queue-size: 1000
       queued-messages.strategy: discard-oldest
       receive-maximum.server-receive-maximum: 10
