Some improvement in README

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ logging:
     name: log/application.log
 
 # Configuration for hivemq-spring-boot-starter
+# Can get commented out at all to have absolute default behaviour
 hivemq:
   enabled: true
   auto-start: false
