--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
-# This is the version catalog for hivemq-spring-boot-starter.
+# This is the version catalog for hivemq-spring-boot-demo.
 # Edit any versions you depend on here!
 # https://docs.gradle.org/current/userguide/platforms.html#sub::toml-dependencies-format
 
 [versions]
 # Build plugins
-spring-boot-version = "3.4.0"
-spring-dependency-management-version = "1.1.6"
+spring-boot-version = "3.4.2"
+spring-dependency-management-version = "1.1.7"
 licence-version = "0.16.1"
 
 # Libraries
@@ -28,7 +28,7 @@ org-springframework-boot-starter-test = { module = "org.springframework.boot:spr
 # Implementations of hivemq-starter ...
 hivemq-spring-boot-starter = { module = "com.example.hivemq.boot:hivemq-spring-boot-starter", version.ref = "hivemq-starter-version" }
 
-# Lombok to reduce boildeplate code
+# Lombok to reduce boilerplate code
 lombok = { module = "org.projectlombok:lombok" }
 
 # Testing ...
